Improve config error management - JSON errors are now printed in chat when joining a world - errors in configure-* files will no longer prevent subsequent modifications
closes #47